--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.8",
-    "expo-sqlite": "~11.3.2",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.14",
+    "expo-sqlite": "~13.4.0",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.73.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
-    "typescript": "^5.1.3"
+    "@types/react": "~18.2.14",
+    "typescript": "^5.3.0"
   },
   "private": true
 }
